# libhoney-rust

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  README.tpl
.github/workflows/: ci.yml
examples/: client.rs
src/: builder.rs  client.rs  errors.rs  event.rs  eventdata.rs  events.rs  fields.rs  lib.rs  mock.rs  response.rs  sender.rs  transmission.rs
