[package]
name = "libhoney-rust"
version = "0.1.6"
authors = ["Norberto Lopes <nlopes.ml@gmail.com>"]
edition = "2018"
description = "Rust library for sending data to Honeycomb"
documentation = "https://docs.rs/libhoney-rust"
repository = "https://github.com/nlopes/libhoney-rust.git"
license = "MIT"
readme = "README.md"
keywords = ["web", "honeycomb", "api"]
categories = ["network-programming", "asynchronous", "api-bindings", "web-programming"]
exclude = [".gitignore", ".travis.yml"]

[lib]
name = "libhoney"
path = "src/lib.rs"

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[badges]
travis-ci = { repository = "nlopes/libhoney-rust", branch = "master" }

[dependencies]
async-channel = "1.5"
# Need the `unstable` feature to enable `Condvar`. Note that this is unrelated to unstable Rust
# features and does not require a nightly Rust. This pins to the exact version since unstable
# features may not respect SemVer.
async-std = { version = "1.9.0", features = ["unstable"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
derivative = "2.2"
futures = "0.3"
log = "0.4"
rand = "0.8"
reqwest = { version = "0.11.0", features = ["blocking", "json"], default-features = false }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"

[dev-dependencies]
async_executors = { version = "0.4", features = ["async_std", "tokio_tp"] }
env_logger = "0.8"
mockito = "0.28"
tokio = { version = "1.0", features = ["time"], default-features = false }
