[package]
name = "libhoney-rust"
version = "0.1.6"
authors = ["Norberto Lopes <nlopes.ml@gmail.com>"]
edition = "2018"
description = "Rust library for sending data to Honeycomb"
documentation = "https://docs.rs/libhoney-rust"
repository = "https://github.com/nlopes/libhoney-rust.git"
license = "MIT"
readme = "README.md"
keywords = ["web", "honeycomb", "api"]
categories = ["network-programming", "asynchronous", "api-bindings", "web-programming"]
exclude = [".gitignore", ".travis.yml"]

[lib]
name = "libhoney"
path = "src/lib.rs"

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[badges]
travis-ci = { repository = "nlopes/libhoney-rust", branch = "master" }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
log = "0.4"
parking_lot = "0.11"
rand = "0.8"
reqwest = { version = "0.11.0", features = ["blocking", "json"], default-features = false }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
tokio = { version = "1.0", features = ["time"], default-features = false }

[dev-dependencies]
env_logger = "0.9"
mockito = "0.32"
